--- a/react-expense-manager/package.json
+++ b/react-expense-manager/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@wojtekmaj/react-daterange-picker": "^3.0.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-loader": "8.1.0",
